feat: implement comprehensive monitoring and observability
- Add OpenTelemetry integration for distributed tracing
- Implement Prometheus metrics for HTTP, database, cache, and business operations
- Configure structured JSON logging with correlation IDs
- Add database query metrics collection with SQLAlchemy events
- Create Redis metrics wrapper for cache performance tracking
- Set up monitoring middleware for request tracking
- Add comprehensive test coverage for monitoring components
- Create Docker Compose stack with Prometheus, Grafana, Jaeger, and Loki
- Add pre-configured Grafana dashboard and Prometheus alerts
- Document monitoring setup and best practices

Implements: Monitoring & Observability from action-plan-code-review-001.md

--- a/.env.example
+++ b/.env.example
@@ -80,6 +80,11 @@ RATE_LIMIT_TAG_LIST=100/minute
 RATE_LIMIT_TAG_UPDATE=50/minute
 RATE_LIMIT_TAG_DELETE=30/minute
 
+# Monitoring and Observability
+OTLP_ENDPOINT=http://localhost:4317  # OpenTelemetry collector endpoint
+JSON_LOGS=true                        # Enable structured JSON logging
+LOG_LEVEL=INFO                        # Logging level (DEBUG, INFO, WARNING, ERROR)
+
 # ===================================================================
 # PRODUCTION SECURITY NOTES
 # ===================================================================
