--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "opentelemetry-instrumentation-sqlalchemy>=0.43b0",
     "opentelemetry-instrumentation-redis>=0.43b0",
     "opentelemetry-exporter-otlp>=1.21.0",
+    "python-json-logger>=2.0.7",
 ]
 
 [build-system]
