refactor: remove broken tier-based rate limiting
Remove non-functional tier-based rate limiting feature in favor of
uniform rate limits for all users. The tier logic was incomplete
with TODO comments and wasn't actually working due to SlowAPI
compatibility issues.

Changes:
- Remove get_user_tier() and per_tier parameter from rate limiter
- Simplify RateLimiters class to use uniform limits
- Remove RateLimitConfig and EnvRateLimitConfig modules
- Update configuration to remove tier-specific settings
- Clean up .env.example removing tier variables
- Update documentation to reflect uniform rate limiting
- Add migration guide for developers
- Add tests to ensure tier logic is removed

This follows YAGNI principle - the feature can be properly
implemented later if actually needed.

BREAKING CHANGE: Tier-specific rate limit environment variables
no longer work. All users now have the same rate limits.

--- a/.env.example
+++ b/.env.example
@@ -38,21 +38,14 @@ BACKEND_CORS_ORIGINS=["http://localhost:3000","http://localhost:8000"]
 
 # Rate Limiting Configuration
 RATE_LIMIT_ENABLED=true
-RATE_LIMIT_STRATEGY=moving-window
-RATE_LIMIT_BURST_SIZE=10
-RATE_LIMIT_BURST_REFILL_RATE=1
-RATE_LIMIT_BURST_REFILL_PERIOD=1
 
-# Default rate limits (per minute/hour)
-RATE_LIMIT_PER_MINUTE=60
+# Default rate limits
+RATE_LIMIT_PER_MINUTE=100
 RATE_LIMIT_PER_HOUR=1000
 
 # Authentication Rate Limits
 RATE_LIMIT_AUTH_REGISTER=10/hour
 RATE_LIMIT_AUTH_LOGIN=5/minute
-# Tier-specific auth limits
-RATE_LIMIT_AUTH_REGISTER_ADMIN=unlimited
-RATE_LIMIT_AUTH_LOGIN_PREMIUM=10/minute
 
 # Todo Rate Limits
 RATE_LIMIT_TODO_CREATE=30/minute
@@ -61,26 +54,21 @@ RATE_LIMIT_TODO_GET=100/minute
 RATE_LIMIT_TODO_UPDATE=30/minute
 RATE_LIMIT_TODO_DELETE=20/minute
 RATE_LIMIT_TODO_BULK=5/minute
-# Tier-specific todo limits
-RATE_LIMIT_TODO_CREATE_PREMIUM=60/minute
-RATE_LIMIT_TODO_CREATE_ADMIN=unlimited
-RATE_LIMIT_TODO_LIST_PREMIUM=120/minute
-RATE_LIMIT_TODO_LIST_ADMIN=unlimited
-RATE_LIMIT_TODO_BULK_PREMIUM=10/minute
-RATE_LIMIT_TODO_BULK_ADMIN=20/minute
 
 # Category Rate Limits
 RATE_LIMIT_CATEGORY_CREATE=20/minute
 RATE_LIMIT_CATEGORY_LIST=60/minute
-RATE_LIMIT_CATEGORY_GET=60/minute
+RATE_LIMIT_CATEGORY_GET=100/minute
 RATE_LIMIT_CATEGORY_UPDATE=20/minute
 RATE_LIMIT_CATEGORY_DELETE=10/minute
 
 # Tag Rate Limits
-RATE_LIMIT_TAG_CREATE=50/minute
-RATE_LIMIT_TAG_LIST=100/minute
-RATE_LIMIT_TAG_UPDATE=50/minute
-RATE_LIMIT_TAG_DELETE=30/minute
+RATE_LIMIT_TAG_CREATE=30/minute
+RATE_LIMIT_TAG_LIST=60/minute
+RATE_LIMIT_TAG_UPDATE=30/minute
+RATE_LIMIT_TAG_DELETE=20/minute
+
+# REMOVED: All tier-specific configurations
 
 # Monitoring and Observability
 OTLP_ENDPOINT=http://localhost:4317  # OpenTelemetry collector endpoint
