--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,9 @@ addopts = "--strict-markers --tb=short"
 
 [dependency-groups]
 dev = [
+    "aiosqlite>=0.21.0",
+    "freezegun>=1.5.3",
+    "greenlet>=3.2.3",
     "types-passlib>=1.7.7.20250602",
     "types-python-jose>=3.5.0.20250531",
 ]
