refactor: make Redis cache database number configurable
- Add redis_cache_db setting to Settings class with default value 2
- Replace hardcoded cache DB value in CacheService with settings value
- Document new REDIS_CACHE_DB environment variable in .env.example
- Add unit test to verify CacheService uses configured DB number

This change allows different environments to use different Redis databases
for caching without code changes, improving deployment flexibility.

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ REDIS_PORT=6379
 REDIS_DB=0
 REDIS_URL=redis://localhost:6379/1
 REDIS_RATE_LIMIT_DB=1
+#REDIS_CACHE_DB=2  # Database for caching service
 
 # Application Configuration
 APP_NAME="Todo API"
