feat(security): add entropy validation for JWT secret keys
- Enforce minimum 16 unique characters in SECRET_KEY
- Prevent weak keys with low entropy (e.g., repeated characters)
- Update tests to verify entropy validation
- Enhance documentation with security warnings and examples
- Improve key generation script to show entropy statistics

BREAKING CHANGE: Existing deployments using weak SECRET_KEYs will fail
validation. Keys must now have at least 16 unique characters in addition
to the 64-character minimum length.

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,9 @@ REDIS_RATE_LIMIT_DB=1
 # Application Configuration
 APP_NAME="Todo API"
 # CRITICAL: Generate a secure key with: python scripts/generate_secret_key.py
+# CRITICAL: Must be cryptographically secure with high entropy
+# - Minimum 64 characters AND minimum 16 unique characters
+# - Generate with: python scripts/generate_secret_key.py
 SECRET_KEY=your_very_long_secure_secret_key_at_least_64_characters_long_generated_with_secrets_token_urlsafe
 # Set to "production" for production deployments (enforces SECRET_KEY requirement)
 ENVIRONMENT=development
