fix: resolve Redis connection issues and improve error handling
- Downgrade redis-py from 5.0.1 to 4.6.0 to fix '_AsyncRESP2Parser' attribute error
- Add OSError and ConnectionError handling in LoginRateLimitService
- Remove duplicate SlowAPIMiddleware registration in main.py
- Enable rate limiting in docker-compose configuration
- Improve error logging for Redis connection failures

The Redis 5.0.1 version has a known bug causing AttributeError with the
'_connected' attribute. This fix ensures graceful degradation when Redis
connections fail and prevents the application from crashing.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       SECRET_KEY: ${SECRET_KEY:?SECRET_KEY is required}
       DATABASE_URL: postgresql+asyncpg://${DATABASE_USER}:${DATABASE_PASSWORD}@postgres:${DATABASE_PORT}/${DATABASE_NAME}
       REDIS_URL: redis://redis:${REDIS_PORT}/${REDIS_DB}
-      RATE_LIMIT_ENABLED: "false"
+      RATE_LIMIT_ENABLED: "true"
     depends_on:
       postgres:
         condition: service_healthy
